--- a/index.html
+++ b/index.html
@@ -3,14 +3,139 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./src/style.css" />
+    <link rel="stylesheet" href="./style.css" />
     <title>Calculadora de Investimentos Impressionadora</title>
   </head>
   <body class="h-[100dvh] grid grid-cols-3 grid-rows-2">
-    <aside class="bg-red-950 row-span-2">
-      <h1 class="text-4xl font-bold px-6 py-2">
-        Calculadora de Investimentos!
-      </h1>
+    <aside
+      class="bg-emerald-300 row-span-2 flex flex-col justify-between py-5 px-2"
+    >
+      <h1 class="text-2xl font-bold px-6">Calculadora de Investimentos</h1>
+      <form class="w-full">
+        <!-- 1o input -->
+        <div class="flex w-full flex-col px-6 mx-2">
+          <label for="starting-amount" class="font-bold text-gray-700"
+            >Investimento Inicial</label
+          >
+          <div class="flex">
+            <input
+              value="R$"
+              class="w-1/6 text-center rounded-l-lg"
+              type="text"
+              disabled
+            />
+            <input
+              type="text"
+              class="w-5/6 rounded-r-lg px-2"
+              placeholder="0.00"
+              id="starting-amount"
+            />
+          </div>
+        </div>
+        <!-- 2o input -->
+        <div class="flex w-full flex-col px-6 mx-2">
+          <label for="additional-contribution" class="font-bold text-gray-700"
+            >Aportes Adicionais</label
+          >
+          <div class="flex">
+            <input
+              value="R$"
+              class="w-1/6 text-center rounded-l-lg"
+              type="text"
+              disabled
+            />
+            <input
+              type="text"
+              class="w-5/6 rounded-r-lg px-2"
+              placeholder="0.00"
+              id="additional-contribution"
+            />
+          </div>
+        </div>
+        <!-- 3o input -->
+        <div class="flex w-full flex-col px-6 mx-2">
+          <label for="time-amount" class="font-bold text-gray-700">Prazo</label>
+          <div class="flex">
+            <input
+              type="text"
+              class="w-2/3 rounded-l-lg px-2"
+              placeholder="0"
+              id="time-amount"
+            />
+            <!--input type="text" class="w-1/6" value="Mensal" />-->
+            <select
+              id="time-amount-period"
+              class="w-1/3 rounded-r-lg border-l-2 border-emerald-600 text-center hover:bg-emerald-950 hover:text-slate-200"
+            >
+              <!-- rounded-r-lg buscar por < Cantos arredondados> no site do tailwind-->
+              <option value="montly">Mensal</option>
+              <option value="yarly">Anual</option>
+            </select>
+          </div>
+        </div>
+        <!-- 4o input -->
+        <div class="flex w-full flex-col px-6 mx-2">
+          <label for="ereturn-rate" class="font-bold text-gray-700"
+            >Rentabilidade</label
+          >
+          <div class="flex">
+            <input
+              value="%"
+              class="w-1/6 text-center rounded-l-lg"
+              type="text"
+              disabled
+            />
+            <input
+              type="text"
+              class="w-1/2 px-2"
+              placeholder="0.00"
+              id="return-rate"
+            />
+            <!--input type="text" class="w-1/6" value="Mensal" />-->
+            <select
+              id="evaluation-period"
+              class="w-1/3 rounded-r-lg border-l-2 border-emerald-600 text-center hover:bg-emerald-950 hover:text-slate-200"
+            >
+              <!-- rounded-r-lg buscar por < Cantos arredondados> no site do tailwind-->
+              <option value="montly">Mensal</option>
+              <option value="yarly">Anual</option>
+            </select>
+          </div>
+        </div>
+        <!-- 5o input -->
+        <div class="flex w-full flex-col px-6 mx-2">
+          <label for="tax-rate" class="font-bold text-gray-700"
+            >Impostos sobre Lucros</label
+          >
+          <div class="flex">
+            <input
+              value="%"
+              class="w-1/6 text-center rounded-l-lg"
+              type="text"
+              disabled
+            />
+            <input
+              type="text"
+              class="w-5/6 rounded-r-lg px-2"
+              placeholder="0.00"
+              id="tax-rate"
+            />
+          </div>
+        </div>
+      </form>
+      <!-- gap-2 é o espaço entre os 2 botões; h-12 é a altura de 12 pixels; px-6 é o padding (horizontal) de 6; my6 é a margem y de 6(vertical)-->
+      <div class="flex h-12 px-6 my-8 w-full gap-2">
+        <button
+          class="w-1/2 rounded-lg bg-emerald-950 text-slate-200 hover:bg-emerald-800"
+        >
+          Calcular
+        </button>
+        <button
+          class="w-1/2 rounded-lg hover:bg-emerald-500 border-solid border-4 border-emerald-950"
+        >
+          Limpar
+        </button>
+      </div>
     </aside>
     <main>
       <p>Resultados</p>
