--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <h1 class="text-2xl font-bold px-6">Calculadora de Investimentos</h1>
       <form id="investment-form" class="w-full">
         <!-- 1o input -->
-        <div class="flex w-full flex-col px-6 mx-2">
+        <div class="flex w-full flex-col px-6 mx-2 h-[4.25rem]">
           <label for="starting-amount" class="font-bold text-gray-700"
             >Investimento Inicial</label
           >
@@ -35,7 +35,7 @@
           </div>
         </div>
         <!-- 2o input -->
-        <div class="flex w-full flex-col px-6 mx-2">
+        <div class="flex w-full flex-col px-6 mx-2 h-[4.25rem]">
           <label for="additional-contribution" class="font-bold text-gray-700"
             >Aportes Adicionais</label
           >
@@ -56,16 +56,16 @@
           </div>
         </div>
         <!-- 3o input -->
-        <div class="flex w-full flex-col px-6 mx-2">
+        <div class="flex w-full flex-col px-6 mx-2 h-[4.25rem]">
           <label for="time-amount" class="font-bold text-gray-700">Prazo</label>
           <div class="flex">
             <input
               type="text"
               class="w-2/3 rounded-l-lg px-2"
               placeholder="0"
+              required
               id="time-amount"
               name="time-amount"
-              required
             />
             <!--input type="text" class="w-1/6" value="Mensal" />-->
             <select
@@ -80,8 +80,8 @@
           </div>
         </div>
         <!-- 4o input -->
-        <div class="flex w-full flex-col px-6 mx-2">
-          <label for="ereturn-rate" class="font-bold text-gray-700"
+        <div class="flex w-full flex-col px-6 mx-2 h-[4.25rem]">
+          <label for="return-rate" class="font-bold text-gray-700"
             >Rentabilidade</label
           >
           <div class="flex">
@@ -95,9 +95,9 @@
               type="text"
               class="w-1/2 px-2"
               placeholder="0.00"
+              required
               id="return-rate"
               name="return-rate"
-              required
             />
             <!--input type="text" class="w-1/6" value="Mensal" />-->
             <select
@@ -112,7 +112,7 @@
           </div>
         </div>
         <!-- 5o input -->
-        <div class="flex w-full flex-col px-6 mx-2">
+        <div class="flex w-full flex-col px-6 mx-2 h-[4.25rem]">
           <label for="tax-rate" class="font-bold text-gray-700"
             >Impostos sobre Lucros</label
           >
@@ -127,9 +127,9 @@
               type="text"
               class="w-5/6 rounded-r-lg px-2"
               placeholder="0.00"
+              required
               id="tax-rate"
               name="tax-rate"
-              required
             />
           </div>
         </div>
@@ -145,6 +145,8 @@
           Calcular
         </button>
         <button
+          id="clear-form"
+          type="click"
           class="w-1/2 rounded-lg hover:bg-emerald-500 border-solid border-4 border-emerald-950"
         >
           Limpar
