--- a/index.html
+++ b/index.html
@@ -153,13 +153,15 @@
         </button>
       </div>
     </aside>
-    <main class="h-full">
-      <section id="charts-container">
-        <div class="h-[36dvh]">
+    <main class="row-span-2 col-span-2">
+      <section id="charts-container" class="h-full">
+        <div
+          class="font-bold tedxt-lg h-[36%] flex flex-col items-center pb-10"
+        >
           <p>Resultado Final</p>
           <canvas id="final-money-distribution"></canvas>
         </div>
-        <div class="h-[56dvh]">
+        <div class="font-bold tedxt-lg h-[56%] flex flex-col items-center">
           <p>Progressão</p>
           <canvas id="progression"></canvas>
         </div>
